[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Enemies/Trunk/Idle (64x32).png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Trunk/Hit (64x32).png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Trunk/Run (64x32).png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Trunk/Attack (64x32).png" type="Texture" id=4]
[ext_resource path="res://Actors/Enemy.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
height = 4.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=3]
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.95
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 17 ]
}

[sub_resource type="Animation" id=6]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 596, 88 )
states/hit/node = SubResource( 8 )
states/hit/position = Vector2( 414, 204 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 596, 204 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 776, 204 )
transitions = [ "idle", "attack", SubResource( 11 ), "idle", "run", SubResource( 12 ), "idle", "hit", SubResource( 13 ), "attack", "idle", SubResource( 14 ), "run", "idle", SubResource( 15 ) ]
start_node = "idle"
end_node = "hit"
graph_offset = Vector2( -27, 49 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
z_index = 5
collision_layer = 4
collision_mask = 75
script = ExtResource( 5 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 18

[node name="ShootPos" type="Position2D" parent="."]
position = Vector2( 21, -12 )

[node name="PlayerDetect" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
enabled = true
cast_to = Vector2( 128, 0 )
collision_mask = 2

[node name="FloorDetect" type="Area2D" parent="."]
position = Vector2( 16, 2 )
collision_layer = 4
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetect"]
shape = SubResource( 2 )

[node name="WallDetect" type="Area2D" parent="."]
position = Vector2( 16, -13 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetect"]
shape = SubResource( 2 )

[node name="AlertTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="PatrolTimer" type="Timer" parent="."]
one_shot = true

[node name="RunCheckTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Animation" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="Tree" type="AnimationTree" parent="Animation"]
tree_root = SubResource( 16 )
anim_player = NodePath("..")
parameters/playback = SubResource( 17 )

[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="RunCheckTimer" to="." method="_on_RunCheckTimer_timeout"]
